# st1201

./: CMakeLists.txt  README.md  st1201-config.cmake.in
.github/workflows/: cmake.yml
include/: st1201.h
include/st1201/: st1201.h
src/: st1201.c
test/: CMakeLists.txt  parse.c  parse.h  st1201.c  test_st1201.c  test_st1201_uint16.c  test_st1201_uint32.c  test_st1201_uint64.c  test_st1201_uint8.c
test/data/: 1bytes.csv  2bytes.csv  4bytes.csv  8bytes.csv  bench.csv
